Fix blockquote text color in dark mode

--- a/styles/main.css
+++ b/styles/main.css
@@ -285,6 +285,10 @@ img {
   box-shadow: black 0px 3px 8px;
 }
 
+[data-theme='dark'] .prose-sm blockquote {
+  color: #a1ffce;
+}
+
 /* light mode */
 
 [data-theme='light'] .nav-line .nav-link {
